--- a/pt St. Philips/celebration.html
+++ b/pt St. Philips/celebration.html
@@ -203,6 +203,27 @@
 
 
 <!-- Footer -->
+    
+				<section id="contact-line">
+					St. Philip's Church
+					<br>
+					The Episcopal Diocese of New York
+					<br>
+					204 West 134 Street - between Adam Clayton 
+					<br> and Frederick Douglass Boulevards
+					New York, NY 10030
+					<br>
+					Parish Office 212-862-4940
+					<br>
+					<br>
+					The Rev. Canon Terence Alexander Lee, Rector  646-856-6464
+					<br>
+					Gail Silver, Parish Administrator                            917-280-2974
+					<br>
+					Lisa Forte-Mason, Sr. Warden                               917-280-2494
+					<br>
+				</section>
+
 		<section id="newsletter">
 				<section id="map">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12078.409997143459!2d-73.944882!3d40.814728!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd80e863dda97e1!2sSt+Philip&#39;s+Church!5e0!3m2!1sen!2sus!4v1527041300640" width="200" height="200" frameborder="0" allowfullscreen></iframe>
