--- a/pt St. Philips/testimonies.html
+++ b/pt St. Philips/testimonies.html
@@ -68,13 +68,13 @@
   <div id="row-1" class="row">
 
     <div class="col-sm">
-      <a href="bulletin/From the Rector.jpg" data-lightbox="gallery" data-title="From the Rector"> <img type="checkbox" class="grow" src="thumb/thumb 1.JPG" width="200vw" height="200vh"></a>
+      <a href="bulletin/From the Rector.png" data-lightbox="gallery" data-title="From the Rector"> <img class="grow" src="thumb/ordinary thumb.png" width="200vw" height="200vh"></a>
       <br>
       <h6>Ordinary Time Aug 08, 2018</h2>
     </div>
 
     <div class="col-sm">
-      <a href="bulletin/Jesus is Our Hope.jpg" data-lightbox="gallery2" data-title="From the Rector 2"> <img class="grow" src="thumb/thumb 2.JPG" width="200vw" height="200vh"></a>
+      <a href="bulletin/Jesus is Our Hope.png" data-lightbox="gallery2" data-title="From the Rector 2"> <img class="grow" src="thumb/hope thumb.png" width="200vw" height="200vh"></a>
       <br>
       <h6>Jesus is our Hope Aug 19, 2018</h2>
     </div>
