--- a/pt St. Philips/giving.html
+++ b/pt St. Philips/giving.html
@@ -275,7 +275,7 @@
 				 width="200" height="200" frameborder="0" allowfullscreen></iframe>
 			</section>
 
-			<div class="container">
+			<div class="container joinus">
 				<ul id="social">
 					<li>
 						<a href="#">
