--- a/pt St. Philips/history - Copy.html
+++ b/pt St. Philips/history - Copy.html
@@ -411,7 +411,7 @@
 					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12078.409997143459!2d-73.944882!3d40.814728!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd80e863dda97e1!2sSt+Philip&#39;s+Church!5e0!3m2!1sen!2sus!4v1527041300640" width="200" height="200" frameborder="0" allowfullscreen></iframe>
 				</section>
 			
-			<div class="container">
+			<div class="container joinus">
 				<ul id="social">
 					<li><a href="#"><img src="insta.svg"></a></li>
 					<li><a href="#"><img src="facebook.svg"></a></li>
