--- a/pt St. Philips/history - Copy.html
+++ b/pt St. Philips/history - Copy.html
@@ -116,7 +116,7 @@
 					</p>
 	    </div>
 	    <div class="col-sm">
-	      <img class="history-img-2" src="./pics/history-logo.png">
+	      <img class="logo-history" src="./pics/history-logo.png">
 	    </div>
 	  </div>
 	</div>
@@ -155,7 +155,7 @@
 	    </div>
 
 	    <div class="col-sm">
-	        <img class="history-img-3" src="./pics/history-old.jpg">
+	        <img class="past-history" src="./pics/history-old.jpg">
 	    </div>
 	  </div>
 	</div>
@@ -202,7 +202,7 @@
 	    </div>
 
 	    <div class="col-sm">
-	        <img class="history-img-4" src="./pics/history-portrait-1.jpg">
+	        <img class="peter-history" src="./pics/history-portrait-1.jpg">
 	    </div>
 	  </div>
 	</div>
@@ -229,12 +229,12 @@
 	  <div class="row">
 
 	    <div class="col-sm">
-	       <img class="history-img-5" src="./pics/history-portrait-2.jpg">
+	       <img class="chew-history" src="./pics/history-portrait-2.jpg">
 
-	       <img class="history-img-5" src="./pics/church-front.jpg">
+	       <img class="front-church-history" src="./pics/church-front.jpg">
 	    </div>
 
-	    <div class="col-sm">
+	    <div class="col-sm" class="chew-front-sub-top">
 	            <p>
 				the choir with men and women. She revived the music school at St. Philip's.
 				
@@ -294,9 +294,17 @@
 	    </div>
 
 	    <div class="col-sm">
-	       <img class="history-img-5" src="./pics/history-portrait-2.jpg">
+	      <img class="history-img-6" src="./pics/history-portrait-3.jpg">
 
-	       <img class="history-img-5" src="./pics/church-front.jpg">
+	       <img class="history-img-7" src="./pics/history-portrait-4.jpg">
+			<section class="history-img-7-sub">
+				<p>Some members of the Board of Directors 
+				<br>
+				for the Lafargue Clinic at St. Philip's. 
+				<br>From left: writer-columnist Earl Brown, 
+				<br>Dr. Frederic Wertham, Fr. Shelton Hale Bishop 
+				and Mrs. Marion Hernandez, 
+				<br>Planned Parenthood.</p>
 	    </div>
 	  </div>
 	</div>
