--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -4,6 +4,9 @@
 	<title>St. Philips</title>
 <!-- Meta Tags -->
 	<meta charset="utf-8">
+	<meta name="description" content="St. Philip's Episcopal Church is an historic Episcopal church located at 204 West 134th Street, between Adam Clayton Powell Jr. Boulevard and Frederick Douglass Boulevard in the Harlem neighborhood of Manhattan, New York City.">
+    <meta name="keywords" content="Harlem sites, NYC architecture, What to do in Harlem">
+    <meta name="author" content="Doreen Malliet, Sheila Vaughn, Patrick Torres">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Bootstrap CSS -->
