--- a/pt St. Philips/pastoralcare.html
+++ b/pt St. Philips/pastoralcare.html
@@ -136,51 +136,65 @@
 
 <!-- Footer -->
     
-				<section id="contact-line">
-					St. Philip's Church
-					<br>
-					The Episcopal Diocese of New York
-					<br>
-					204 West 134 Street - between Adam Clayton 
-					<br> and Frederick Douglass Boulevards
-					New York, NY 10030
-					<br>
-					Parish Office 212-862-4940
-					<br>
-					<br>
-					The Rev. Canon Terence Alexander Lee, Rector  646-856-6464
-					<br>
-					Gail Silver, Parish Administrator                            917-280-2974
-					<br>
-					Lisa Forte-Mason, Sr. Warden                               917-280-2494
-					<br>
-				</section>
+<div id="new-footer">
+	<div class="container">
+	  <div class="row">
+	    <div class="col">
+	      <section id="footer-new-head">
+			    <i>KEEP IN TOUCH WITH ST. PHILIP'S</i>
+		  </section>
 
-		<section id="newsletter">
-				<section id="map">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12078.409997143459!2d-73.944882!3d40.814728!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd80e863dda97e1!2sSt+Philip&#39;s+Church!5e0!3m2!1sen!2sus!4v1527041300640" width="200" height="200" frameborder="0" allowfullscreen></iframe>
+		  <section id="footer-new-head">
+			    <section id="new-contact-line">
+		    		<p>St. Philip's Church
+						<br>
+						The Episcopal Diocese of New York
+						<br>
+						204 West 134 Street - between Adam Clayton 
+						<br> and Frederick Douglass Boulevards
+						New York, NY 10030
+						<br>
+						Parish Office 212-862-4940
+						<br>
+						<br>
+						The Rev. Canon Terence Alexander Lee, Rector  646-856-6464
+						<br>
+						Gail Silver, Parish Administrator                            917-280-2974
+						<br>
+						Lisa Forte-Mason, Sr. Warden                               917-280-2494
+						<br>
+					</p>
 				</section>
-			
-			<div class="container joinus">
-				<ul id="social">
-					<li><a href="#"><img src="insta.svg"></a></li>
-					<li><a href="#"><img src="facebook.svg"></a></li>
-				</ul>
-				<h1 id="footer-head"><i>JOIN US THIS LITURGICAL YEAR</i><br> 
-					<span id="footer-sub">KEEP IN TOUCH WITH ST. PHILIP'S</span>
-				</h1>
+		  </section>
+	    </div>
+	      <div class="col">
+	    	<section id="new-map">
+	    		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12078.409997143459!2d-73.944882!3d40.814728!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd80e863dda97e1!2sSt+Philip&#39;s+Church!5e0!3m2!1sen!2sus!4v1527041300640" width="300" height="300" frameborder="0" allowfullscreen></iframe>
+	    	</section>
+	      </div>
+	  </div>
+	</div>
 
-				<form action="process.php">
-					<input type="email" placeholder="Enter email" name="">
-					<button type="submit" class="button_1">Subscribe</button>
-				</form>
-			</div>
-		</section>
+	<div class="container">
+	  <div class="row">
+	    <div class="col-sm">
+	      
+	    </div>
+	  </div>
+	</div>
+</div>
+	
+	
+
+<a href="#vision"><img class="down" src="arrow.png" style="right: 5%;"></a>
+
 <!-- Footer End -->
+<!-- <a href="#mission"><p class="mission">MISSION</p>
+<a href="#vision"><p class="vision">VISION</p> -->
 
 	<footer>
-		<p>2017 &copy; St. Philip's Church. All rights reserved.</p>
-	</footer>		
+		<p>2018 &copy; St. Philip's Church. All rights reserved.</p>
+	</footer>			
 
 </body>
 </html>
