new event stuff

--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -92,6 +92,47 @@
 			</div>
 </section>
 
+	<div class="container" style="margin: auto; text-align: center;">
+	  <div class="row">
+	    <div class="col-sm">
+	      <h1 class="new-event-title" style="color: white; background-color: grey; width: 70%; margin: auto;">
+	      	Law Day
+	      </h1>
+	      <img src="./pics/thurgood.jpg" class="new-event-img">
+	      <p class="new-event-sub">
+	      	<i>		<span class="new-span">
+					T
+					</span>
+					hurgood Marshall Law Day 2018</i>
+					<br>
+					<br>
+					<i>An Evensong Conversation</i>
+					<br>
+					<br>
+					<i>St. Philip's Church</i>
+					<i>2-4 West 134th Street, Net York, New York 10030</i>
+					<br>
+					<br>
+					<i>Saturday, May 12th at 4:00 p.m.</i>
+					<br>
+					<br>
+					<i>Featuring Darcel Clark, 13th District Attorney for Bronx
+					County</i>
+	      </p>
+	    </div>
+	    <div class="col-sm">
+	      <h1 style="color: white; background-color: grey; width: 70%; margin: auto;">
+	      	Title
+	      </h1>
+	      <img src="./pics/thurgood.jpg" style="border: 6px solid grey; width: 70%;">
+	      <p style="color: black; background-color: grey; width: 70%; margin: auto;">
+	      	<span>A</span>
+	      	ll horses eat carrots.
+	      </p>
+	    </div>
+	  </div>
+	</div>
+
 
 <!-- Content End -->
 
