--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -92,10 +92,10 @@
 			</div>
 </section>
 
-	<div class="container" style="margin: auto; text-align: center;">
+	<div class="container new-event-container">
 	  <div class="row">
 	    <div class="col-sm">
-	      <h1 class="new-event-title" style="color: white; background-color: grey; width: 70%; margin: auto;">
+	      <h1 class="new-event-title">
 	      	Law Day
 	      </h1>
 	      <img src="./pics/thurgood.jpg" class="new-event-img">
@@ -121,13 +121,68 @@
 	      </p>
 	    </div>
 	    <div class="col-sm">
-	      <h1 style="color: white; background-color: grey; width: 70%; margin: auto;">
-	      	Title
+	      <h1 class="new-event-title">
+	      	Dance of the Village Elders
 	      </h1>
-	      <img src="./pics/thurgood.jpg" style="border: 6px solid grey; width: 70%;">
-	      <p style="color: black; background-color: grey; width: 70%; margin: auto;">
-	      	<span>A</span>
-	      	ll horses eat carrots.
+	      <p class="new-event-sub">
+	      	<i>		<span class="new-span">
+					N
+					</span>
+					inety minute free fitness classes for seniors on Thursdays @2 p.m.</i> 
+					<br>
+					<br>
+					Dates for St. Philips are every third Sunday of the month.  
+					<br>
+					<br>
+					Prior to the day, parishioners are asked to contribute lunch items - cold cuts/bread/individual packaged drinks/condiments.
+	      </p>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="container new-event-container">
+	  <div class="row">
+	    <div class="col-sm">
+	      <h1 class="new-event-title">
+	      	Law Day
+	      </h1>
+	      <img src="./pics/thurgood.jpg" class="new-event-img">
+	      <p class="new-event-sub">
+	      	<i>		<span class="new-span">
+					T
+					</span>
+					hurgood Marshall Law Day 2018</i>
+					<br>
+					<br>
+					<i>An Evensong Conversation</i>
+					<br>
+					<br>
+					<i>St. Philip's Church</i>
+					<i>2-4 West 134th Street, Net York, New York 10030</i>
+					<br>
+					<br>
+					<i>Saturday, May 12th at 4:00 p.m.</i>
+					<br>
+					<br>
+					<i>Featuring Darcel Clark, 13th District Attorney for Bronx
+					County</i>
+	      </p>
+	    </div>
+	    <div class="col-sm">
+	      <h1 class="new-event-title">
+	      	Dance of the Village Elders
+	      </h1>
+	      <p class="new-event-sub">
+	      	<i>		<span class="new-span">
+					N
+					</span>
+					inety minute free fitness classes for seniors on Thursdays @2 p.m.</i> 
+					<br>
+					<br>
+					Dates for St. Philips are every third Sunday of the month.  
+					<br>
+					<br>
+					Prior to the day, parishioners are asked to contribute lunch items - cold cuts/bread/individual packaged drinks/condiments.
 	      </p>
 	    </div>
 	  </div>
