st philips compression

--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -52,7 +52,7 @@
 <!-- Navigation End -->
 
 <!-- Content Start -->
-<section id="boxes">
+<!-- <section id="boxes">
 			<div class="container">
 				<div class="box">
 					<h2>Law Day</h2>
@@ -90,9 +90,9 @@
 					</i>
 				</div>
 			</div>
-</section>
+</section> -->
 
-	<div class="container new-event-container">
+	<div class="container new-event-container-first">
 	  <div class="row">
 	    <div class="col-sm">
 	      <h1 class="new-event-title">
@@ -140,50 +140,39 @@
 	  </div>
 	</div>
 
-	<div class="container new-event-container">
+	<div class="container new-event-container-last">
 	  <div class="row">
 	    <div class="col-sm">
 	      <h1 class="new-event-title">
-	      	Law Day
+	      	Harry T. Burleigh Society
 	      </h1>
-	      <img src="./pics/thurgood.jpg" class="new-event-img">
+	      <img src="./pics/harry.png" class="new-event-img">
+	      <h3 class="new-event-title-sub">Advancing Burleigh Studies Through Scholarship and Performance</h3>
 	      <p class="new-event-sub">
 	      	<i>		<span class="new-span">
-					T
+					H. 
+
 					</span>
-					hurgood Marshall Law Day 2018</i>
+					B. Burleigh (166-1949) was an African American classical composer, arranger, and professional singer known for his baritone voice.  </i>
 					<br>
 					<br>
-					<i>An Evensong Conversation</i>
+					<i>He was the first black composer to be instrumental in the development of a characteristically American music </i>
 					<br>
 					<br>
-					<i>St. Philip's Church</i>
-					<i>2-4 West 134th Street, Net York, New York 10030</i>
+					<i>and he helped to make black music available to classically trained artists both by introducing them to the music </i>
+					<i>and by arranging the music in a more classical form.</i>
 					<br>
 					<br>
-					<i>Saturday, May 12th at 4:00 p.m.</i>
+					<i><a href="www.burleighsociety.com">www.burleighsociety.com</a></i>
 					<br>
 					<br>
 					<i>Featuring Darcel Clark, 13th District Attorney for Bronx
 					County</i>
 	      </p>
 	    </div>
+
 	    <div class="col-sm">
-	      <h1 class="new-event-title">
-	      	Dance of the Village Elders
-	      </h1>
-	      <p class="new-event-sub">
-	      	<i>		<span class="new-span">
-					N
-					</span>
-					inety minute free fitness classes for seniors on Thursdays @2 p.m.</i> 
-					<br>
-					<br>
-					Dates for St. Philips are every third Sunday of the month.  
-					<br>
-					<br>
-					Prior to the day, parishioners are asked to contribute lunch items - cold cuts/bread/individual packaged drinks/condiments.
-	      </p>
+	      
 	    </div>
 	  </div>
 	</div>
