--- a/pt St. Philips/index.html
+++ b/pt St. Philips/index.html
@@ -66,31 +66,31 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img id="caro-img" class="d-block w-100" src="./pics/Stainglass Motto1.png" alt="First slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/Stainglass Motto1.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block h-100 w-100" src="./pics/Landmark Plaque1.jpg" alt="Second slide">
+      <img id="caro-img" class="d-block h-100 w-100" src="./pics/compress/Landmark Plaque1.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/Altar1.png" alt="Third slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/Altar1.jpg" alt="Third slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/bells.png" alt="Fourth slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/bells.jpg" alt="Fourth slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/choir2.jpg" alt="Fourth slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/choir2.jpg" alt="Fourth slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/plaque.jpg" alt="Fourth slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/plaque.jpg" alt="Fourth slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/interior.jpg" alt="Fourth slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/interior.jpg" alt="Fourth slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/tree.jpg" alt="Fourth slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/tree.jpg" alt="Fourth slide">
     </div>
     <div class="carousel-item">
-      <img id="caro-img" class="d-block w-100" src="./pics/blessings.jpg" alt="Fourth slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/blessings.jpg" alt="Fourth slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
