events and vestry pic

--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -506,10 +506,20 @@
 </div>
 
 <div class="container" id="staff-overall-container">
+
 <h2 class="mission-header mission-header-green">Vestry</h2>
 	<p class="mission-top-sub">The vestry is made up of lay people elected by the parish to work with the rector to oversee the temporal health of their congregation. Vestry members are elected at each Annual Parish Meeting in January.</p>
 		<div id="staff-img-container" class="container">
 		
+	<div class="container">
+  <div class="row">
+    <div class="col-sm vest-col">
+    	<div>
+			<img id="vest" class="pic-border" src="./pics/vestry.jpg" width="400" height="300">
+		</div>
+    </div>
+    <div class="col-sm">
+      <div>
 		<div class="vestry-role-top">
 			<h2 class="vestry-name fit">WARDENS</h2>
 			<h2 class="vestry-sub">Lisa Forte-Mason, Esq.</h2>
@@ -531,6 +541,14 @@
 			Stewardship: Rita Livingston</p>
 
 		</div>
+	</div>
+    </div>
+  </div>
+</div>
+
+		
+
+	
 		
 		<!-- <div class="vestry-role-top">
 			<h2 class="vestry-name">BUILDING &amp; GROUNDS COMMITTEE</h2>
