--- a/pt St. Philips/index NEW.html
+++ b/pt St. Philips/index NEW.html
@@ -15,6 +15,9 @@
 <!-- CSS from scratch -->
 	<link rel="stylesheet" type="text/css" href="styles.css">
 
+	<link rel="stylesheet" type="text/css" href="styles NEW.css">
+
+
 <!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Merriweather" rel="stylesheet">
 
@@ -27,33 +30,42 @@
 </head>
 <body>
 <!-- Navigation Start -->
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+<!-- new nav -->
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #ED2024;">
+
+<!-- nav bar -->
   <a class="navbar-brand" href="#"><img src=""></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	  </button>
 
-
+<!-- brand img -->
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-  	<a class="navbar-brand" href="#">
-    <img src="./logo/stlogo.png" width="320" height="40" alt="">
-  </a>
-    <ul class="navbar-nav mr-auto">
+  	<a style="margin-left: 20vw;" class="navbar-brand" href="#">
+    	<img src="./logo/logotext.png" width="350" height="40" alt="">
+  	</a>
+
+<!-- nav items -->
+    <ul class="navbar-nav mr-auto ml-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Main<span class="sr-only">(current)</span></a>
       </li>
+      	 <!-- drop down start -->
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          About
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        	<a class="dropdown-item" href="#">Worship</a>
-        	<a class="dropdown-item" href="#">From the Rector</a>
-        	<a class="dropdown-item" href="#">Events</a>
-        	<a class="dropdown-item" href="#">Rentals</a>
-        	<a class="dropdown-item" href="#">Pastoral Care</a>
+	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	          About
+	        </a>
+	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+	        	<a class="dropdown-item" href="#">Worship</a>
+	        	<a class="dropdown-item" href="#">From the Rector</a>
+	        	<a class="dropdown-item" href="#">Events</a>
+	        	<a class="dropdown-item" href="#">Rentals</a>
+	        	<a class="dropdown-item" href="#">Pastoral Care</a>
+	        </div>
       </li>
+         <!-- drop down end -->
       <li class="nav-item">
         <a class="nav-link" href="#">History<span class="sr-only">(current)</span></a>
       </li>
@@ -67,6 +79,7 @@
         <a class="nav-link" href="#">Celebration<span class="sr-only">(current)</span></a>
       </li>
     </ul>
+
   </div>
 </nav>
 <!-- Navigation End -->
@@ -125,39 +138,32 @@
 <!-- Carousel End -->
 
 <!-- Mission -->
-<header></header>
+<hr style="width: 80%;">
 
 <div class="container">
-	<section id="mission">
-		<div id="mission-start" class="container">
-			<h2 class="mission-header mission-header-green">Our Mission
-			</h2>
-				<article class="mission-top-sub">
-					<p>To be a welcoming and vibrant intergenerational community
-						of faith, focused on sharing the Gospel of Jesus Christ
-						through joyful worship and love, commitment to spiritual growth,
-						and active service in the community.
-					</p>
-				</article>
 
-				<h2 id="vision" class="mission-header mission-header-green">Our Vision
-			</h2>
-				<article class="mission-top-sub">
-					<p>Continue to grow and be an inclusive congregation, meeting the spiritual needs of its members and the wider community. 
-					<br>
-					<br>
-					Be a church that both celebrates our history and faithfully lives into the future. 
-					<br>
-					<br>
-					Be a community partner with our local business and leaders.
-					</p>
-				</article>
-
-			<img src="pics/welcome.jpg" class="pic-border" style="width:100%; height:100%;">
-		</div>
-	</section>
+	<div class="container">
+	  <div class="row">
+	    <div class="col-sm">
+	      <h2>Our Mission</h2>
+	    	<p>To be a welcoming and vibrant intergenerational community
+				of faith, focused on sharing the Gospel of Jesus Christ
+				through joyful worship and love, commitment to spiritual growth,
+				and active service in the community.
+			</p>
+	    </div>
+	    <div class="col-sm">
+	      <h2>Our Vision</h2>
+	    		<p>Continue to grow and be an inclusive congregation, meeting the spiritual needs of its members and the wider community. 
+				Be a church that both celebrates our history and faithfully lives into the future. 
+				Be a community partner with our local business and leaders.
+				</p>
+			</p>
+	    </div>
+	  </div>
+	</div>
 </div>
-
+<hr style="width: 80%;">
 <!-- Mission End -->
 
 
@@ -165,11 +171,11 @@
 
 <!-- Footer -->
     
-<div id="new-footer">
+<div id="new-footer-">
 	<div class="container">
 	  <div class="row">
 	    <div class="col">
-	      <section id="footer-new-head">
+	      <section id="footer-new-head-">
 			    <i>KEEP IN TOUCH WITH ST. PHILIP'S</i>
 		  </section>
 
@@ -226,3 +232,4 @@
 	</footer>		
 </body>
 </html>
+
