--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -87,10 +87,10 @@
 					<p>Services below will resume in the fall:
 					<br>
 					<br>
-						9:00 a.m. Morning Prayer
+						Holy Eucharist Rite II
 					<br>
 					<br>
-					 11:00 a.m.  first, second and fourth Sundays - Solemn High Mass.  
+					 11:00 a.m.  first, second and fourth Sundays - Sung Eucharist 
 					 <br>
 					 <br>
 					 Third and fifth Sundays - Gospel Eucharist 
@@ -98,7 +98,7 @@
 				</article>
 
 				<article class="mission-top-sub">
-					<p>SUNDAY SCHOOL will resume in September 2018.<!-- - classes for ages 3 through their high school years meet at 10:00 a.m. in the first floor classroom through June 24, 2018. -->
+					<p>Christian Formation will resume in September 2018.<!-- - classes for ages 3 through their high school years meet at 10:00 a.m. in the first floor classroom through June 24, 2018. -->
 					<br>
 					<br>
 					</p>
