--- a/pt St. Philips/index.html
+++ b/pt St. Philips/index.html
@@ -38,7 +38,7 @@
 					<li class="current"><a href="index.html">Home</a></li>
 					<li id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><a href="#">About</a></li>
 						<li class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-							<a class="dropdown-item" href="about.html">INFO</a>
+							<a class="dropdown-item" href="about.html">WORSHIP</a>
 							<a class="dropdown-item" href="testimonies.html">FROM THE RECTOR</a>
     						<a class="dropdown-item" href="events.html">EVENTS</a>
     						<a class="dropdown-item" href="rentals.html">RENTALS</a>
@@ -136,7 +136,8 @@
 					</p>
 				</article>
 
-			<img src="pics/welcome.jpg" class="pic-border" style="width:100%; height:100%;">
+
+
 		</div>
 	</section>
 </div>
@@ -175,6 +176,11 @@
 						<br>
 						Lisa Forte-Mason, Sr. Warden                               917-280-2494
 						<br>
+						<br>
+						Local C train (blue Line) to 135th Street.  
+						<br>
+						No. 2 or 3 train 
+						(red line) to 135th Street
 					</p>
 				</section>
 		  </section>
