--- a/pt St. Philips/testimonies.html
+++ b/pt St. Philips/testimonies.html
@@ -68,13 +68,13 @@
   <div id="row-1" class="row">
 
     <div class="col-sm">
-      <a href="bulletin/From the Rector 2.png" data-lightbox="gallery" data-title="From the Rector"> <img class="grow" src="thumb/ordinary thumb.png" width="200vw" height="200vh"></a>
+      <a href="bulletin/From the Rector 2.png" data-lightbox="gallery" data-title="From the Rector"> <p style="font-size: 200%;">From the Rector</p><!-- <img class="grow" src="thumb/ordinary thumb.png" width="200vw" height="200vh"> --></a>
       <br>
       <h6>Aug 08, 2018</h2>
     </div>
 
     <div class="col-sm">
-      <a href="bulletin/Jesus is Our Hope.png" data-lightbox="gallery2" data-title="From the Rector 2"> <img class="grow" src="thumb/hope thumb.png" width="200vw" height="200vh"></a>
+      <a href="bulletin/Jesus is Our Hope.png" data-lightbox="gallery2" data-title="From the Rector 2"> <p style="font-size: 200%;">Jesus is Our Hope</p><!-- <img class="grow" src="thumb/hope thumb.png" width="200vw" height="200vh"> --></a>
       <br>
       <h6>Aug 19, 2018</h2>
     </div>
