--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -141,6 +141,10 @@
 
 					</span>
 					The Right Reverend Andrew M. L. Dietsche, D. D. Bishop, Episcopal Diocese of New York
+					<br>
+					<br>
+					Homecoming Sunday - 9:30 a.m. 
+					Neigborhood Procession 
 
 					</i>
 					<br>
@@ -184,7 +188,7 @@
 	      <h3 class="new-event-title-sub-c">
 	      October 21, 2018 Resume two (2) services
 	      <br> 
-	      9:00 a.m.  Morning Prayer
+	      9:00 a.m.  Holy Eucharist Rite II
 	  	  </h3>
 	      <p class="new-event-sub-c">
 	      	<i>		<span class="new-span-c">
@@ -197,6 +201,115 @@
 	      </p>
 	    </div>
 
+	    <div class="col-sm">
+	      <h1 class="new-event-title-c">
+	      	Shut-In Eucharist
+	      </h1>
+
+	      <h3 class="new-event-title-sub-c">
+	      October 24, 2018
+	      <br> 
+	  	  </h3>
+	      <!-- <p class="new-event-sub-c">
+	      	<i>		<span class="new-span-c">
+					N
+					</span>
+					inety minute free fitness classes for seniors on Thursdays @2 p.m.</i> 
+					<br>
+					<br>
+					Dates for St. Philips are every third Sunday of the month.  
+					<br>
+					<br>
+					Prior to the day, parishioners are asked to contribute lunch items - cold cuts/bread/individual packaged drinks/condiments.
+	      </p> -->
+	    </div>
+	  </div>
+	</div>
+
+	<div class="container new-event-container-last">
+	  <div class="row">
+	  	<div class="col-sm">
+	    	<h1 class="new-event-title-c">
+	      	All Saints Sunday
+	      </h1>
+	      
+	      <h3 class="new-event-title-sub-c">
+	      November 4, 2018
+	      <br> 
+	      11:00 a.m.
+	  	  </h3>
+	      <!-- <p class="new-event-sub-c">
+	      	<i>		<span class="new-span-c">
+					1 
+					</span>
+					1:00 a.m first, second and fourth Sundays, Solemn High Mass; third and fifth Sundays Gospel Eucharist 
+					</i>
+					<br>
+					<br>
+	      </p> -->
+	    </div>
+
+	    <div class="col-sm">
+	      <h1 class="new-event-title-c">
+	      	Thanksgiving Luncheon
+	      </h1>
+
+	      <h3 class="new-event-title-sub-c">
+	      Candance Organization November 11, 2018
+	      <br> 
+	      11:00 a.m.
+	  	  </h3>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="container new-event-container-last">
+	  <div class="row">
+	  	<div class="col-sm">
+	    	<h1 class="new-event-title-c">
+	      	Thanksgiving Luncheon
+	      </h1>
+	      
+	      <h3 class="new-event-title-sub-c">
+	      Candance Organization November 18, 2018
+	      <br> 
+	      After 11:00 a.m. service
+	  	  </h3>
+	      <!-- <p class="new-event-sub-c">
+	      	<i>		<span class="new-span-c">
+					1 
+					</span>
+					1:00 a.m first, second and fourth Sundays, Solemn High Mass; third and fifth Sundays Gospel Eucharist 
+					</i>
+					<br>
+					<br>
+	      </p> -->
+	    </div>
+
+	    <div class="col-sm">
+	      <h1 class="new-event-title-c">
+	      	Integrity Ministry
+	      </h1>
+	      <h3 class="new-event-title-sub-c">
+	      December 7, 2018
+	      <br> 
+	      7:00 p.m.
+	  	  </h3>
+	      <p class="new-event-sub-c">
+	      	<i>		<span class="new-span-c">
+					L
+					</span>
+					GBTQ Homeless Christmas Celebration</i>
+					<br>
+					<br>
+					Suggested donation, $10 or $20 gift cards 
+	      </p>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="container new-event-container-last">
+	  <div class="row">
 	    <div class="col-sm">
 	      <h1 class="new-event-title-c">
 	      	Dance of the Village Elders
