--- a/pt St. Philips/celebration.html
+++ b/pt St. Philips/celebration.html
@@ -88,7 +88,7 @@
 					  <div class="modal-content-0">
 					    <span onclick="close0()" class="close">&times;</span>
 					    	<p>Have an event coming up? <br><br>
-							Contact Father Lee at 646-856-6464.
+							Contact the Parish Administrator at 212-862-4940.
 							</p>
 					  </div>
 	</div>
@@ -125,7 +125,7 @@
 					  <div class="modal-content-0">
 					    <span onclick="close0()" class="close">&times;</span>
 					    	<p>Have an event coming up? <br><br>
-							Contact Father Lee at 646-856-6464.
+							Contact the Parish Administrator at 212-862-4940.
 							</p>
 					  </div>
 				</div>
@@ -174,7 +174,7 @@
 					  <div class="modal-content-0">
 					    <span onclick="close0()" class="close">&times;</span>
 					    	<p>Have an event coming up? <br><br>
-							Contact Father Lee at 646-856-6464.
+							Contact the Parish Administrator at 212-862-4940.
 							</p>
 					  </div>
 				</div>
@@ -214,7 +214,7 @@
 					  <div class="modal-content-0">
 					    <span onclick="close0()" class="close">&times;</span>
 					    	<p>Have an event coming up? <br><br>
-							Contact Father Lee at 646-856-6464.
+							Contact the Parish Administrator at 212-862-4940.
 							</p>
 					  </div>
 				</div>
