--- a/pt St. Philips/ministries.html
+++ b/pt St. Philips/ministries.html
@@ -105,7 +105,7 @@
     </div>
     
     <div class="col">
-     <h2 class="ministries-header">Sunday School:</h2>
+     <h2 class="ministries-header">Christian Formation:</h2>
 			<article class="ministries-content">
 				<p>Children five to eighteen years old are taught Christian theology based on <span>The Book of Common Prayer</span> and <span>The Bible.</span><br>
 					<div style="clear: both;"></div>
