--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -251,7 +251,7 @@
 
 	    <div class="col-sm">
 	      <h1 class="new-event-title-c">
-	      	Thanksgiving Luncheon
+	      	Corporate Communion
 	      </h1>
 
 	      <h3 class="new-event-title-sub-c">
@@ -452,6 +452,32 @@
 	<footer>
 		<p>2018 &copy; St. Philip's Church. All rights reserved.</p>
 	</footer>		
+
+
+<script type="text/javascript">
+var modal = document.getElementById('myModal');
+
+// }
+function seemore0() {
+	modal0.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+function close0() {
+        modal0.style.display = "none";
+    }
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+	if (event.target == modal0) {
+        modal0.style.display = "none";
+    }
+}
+
+
+
+</script>
+
 
 </body>
 </html>
