--- a/pt St. Philips/index.html
+++ b/pt St. Philips/index.html
@@ -56,7 +56,7 @@
 
 <!-- Carousel Start -->
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <!-- <ol class="carousel-indicators">
+  <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
@@ -66,12 +66,12 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
-  </ol> -->
+  </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img id="caro-img" class="d-block w-100" src="./pics/compress/static.png" alt="First slide">
     </div>
-    <!-- <div class="carousel-item">
+    <div class="carousel-item">
       <img id="caro-img" class="d-block h-100 w-100" src="./pics/compress/Landmark Plaque1.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
@@ -94,7 +94,7 @@
     </div>
     <div class="carousel-item">
       <img id="caro-img" class="d-block w-100" src="./pics/compress/rector.jpg" alt="Fourth slide">
-    </div> -->
+    </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
