--- a/pt St. Philips/testimonies.html
+++ b/pt St. Philips/testimonies.html
@@ -62,6 +62,25 @@
   </div>
 </div>
 </div>
+
+<div id="p1" class="container">
+
+  <div id="row-1" class="row">
+
+    <div class="col-sm">
+      <a href="bulletin/Evangelism.JPG" data-lightbox="gallery" data-title="From the Rector"> <p style="font-size: 200%;">Evangelism</p><!-- <img class="grow" src="thumb/ordinary thumb.png" width="200vw" height="200vh"> --></a>
+      <br>
+      <h6>Sep 02 2018, 2018</h2>
+    </div>
+
+    <div class="col-sm">
+      <a href="bulletin/God Has A Dream.JPG" data-lightbox="gallery2" data-title="From the Rector 2"> <p style="font-size: 200%;">God Has A Dream</p><!-- <img class="grow" src="thumb/hope thumb.png" width="200vw" height="200vh"> --></a>
+      <br>
+      <h6>Aug 26, 2018 Archbishop Tuto</h2>
+    </div>
+  </div>
+  
+</div>
     
 <div id="p1" class="container">
 
@@ -78,8 +97,8 @@
       <br>
       <h6>Aug 19, 2018</h2>
     </div>
+  </div>
 
-</div>
 </div>
 <!-- Testimonies End -->
 
