--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -9,18 +9,19 @@
 <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 
+<!-- Lightbox CSS -->
+	<link rel="stylesheet" type="text/css" href="css/lightbox.css">
+
+<!-- Lightbox JS -->
+	<script type="text/javascript" src="lightbox.min.js"></script>
+	<script type="text/javascript" src="lightbox-plus-jquery.min.js"></script>
+
 <!-- CSS from scratch -->
 	<link rel="stylesheet" type="text/css" href="styles.css">
 
 <!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Merriweather" rel="stylesheet">
 	
-<!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-
 </head>
 <body>
 <!-- Navigation Start -->
@@ -337,7 +338,7 @@
 	      <h1 class="new-event-title">
 	      	Harry T. Burleigh Society
 	      </h1>
-	      <img src="./pics/harry.png" class="new-event-img">
+	      <a href="./pics/thurgood.jpg" data-lightbox="gallery" data-title="."><img src="./pics/harry.png" class="new-event-img"></a>
 	      <h3 class="new-event-title-sub">Advancing Burleigh Studies Through Scholarship and Performance</h3>
 	      <p class="new-event-sub">
 	      	<i>		<span class="new-span">
@@ -365,7 +366,7 @@
 	      <h1 class="new-event-title">
 	      	Law Day
 	      </h1>
-	      <img src="./pics/thurgood.jpg" class="new-event-img">
+	      <a href="./pics/thurgood.jpg" data-lightbox="gallery" data-title="."><img src="./pics/thurgood.jpg" class="new-event-img"></a>
 	      <p class="new-event-sub">
 	      	<i>		<span class="new-span">
 					T
@@ -478,6 +479,12 @@ window.onclick = function(event) {
 
 </script>
 
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script type="main.js"></script>
 
 </body>
 </html>
