--- a/pt St. Philips/index.html
+++ b/pt St. Philips/index.html
@@ -69,7 +69,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img id="caro-img" class="d-block w-100" src="./pics/compress/static.png" alt="First slide">
+      <img id="caro-img" class="d-block w-100" src="./pics/compress/Stainglass Motto1.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
       <img id="caro-img" class="d-block h-100 w-100" src="./pics/compress/Landmark Plaque1.jpg" alt="Second slide">
